# go-socket-client

./: .gitignore  CMakeLists.txt  README.md  build_android.py  build_ios.py  build_osx.py  build_utils.py  main.cpp  net_core.cpp  object_pool.hpp  tcp_client.cpp  tcp_client.hpp  tcp_define.h  unit_test.cpp  unit_test.hpp
.github/workflows/: go-socket-client.yml
common/: alarm.cpp  alarm.hpp  message_queue.cpp  message_queue.hpp  scope_guard.cpp  scope_guard.hpp  time_utils.c  time_utils.h
connect/: complex_connect.cpp  complex_connect.hpp  dns_query.cpp  dns_query.hpp  ssl_connector.cpp  ssl_connector.hpp  tcp_connector.cpp  tcp_connector.hpp
examples/go-socket-android/: settings.gradle
examples/go-socket-android/app/: build.gradle
examples/go-socket-android/app/src/androidTest/java/com/kawayu/go_socket_android/: ExampleInstrumentedTest.kt
examples/go-socket-android/app/src/main/: AndroidManifest.xml
examples/go-socket-android/app/src/main/java/com/kawayu/go_socket_android/: MainActivity.kt  TcpClient.java
examples/go-socket-android/app/src/main/java/com/kawayu/go_socket_android/ui/theme/: Color.kt  Theme.kt  Type.kt
examples/go-socket-android/app/src/main/res/values/: strings.xml  themes.xml
examples/go-socket-android/app/src/test/java/com/kawayu/go_socket_android/: ExampleUnitTest.kt
examples/go-socket-android/gradle/wrapper/: gradle-wrapper.properties
examples/go-socket-ios/go-socket-ios/: AppDelegate.h  AppDelegate.mm  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.mm  main.m
examples/go-socket-ios/go-socket-ios.xcodeproj/: project.pbxproj
examples/go-socket-ios/go-socket-ios/Base.lproj/: Main.storyboard
examples/go-socket-ios/go-socket-ios/gotcp.framework/Headers/: net_core.hpp  tcp_define.h
jni/: com_kawayu_go_socket_android_TcpClient.cc  com_kawayu_go_socket_android_TcpClient.h  com_kawayu_go_socket_android_TcpClient_ConnStatusChangeListener.h  com_kawayu_go_socket_android_TcpClient_GetConnectInfoListener.h  com_kawayu_go_socket_android_TcpClient_GetHttpDnsListener.h  com_kawayu_go_socket_android_TcpClient_SendReqListener.h  com_kawayu_go_socket_android_TcpClient_SendRespListener.h  com_kawayu_go_socket_android_TcpClient_ServerDisconnectListener.h  scoped_jstring.cc
log/: log_define.h  loginfo_extract.cpp  loginfo_extract.hpp  zlogger.cpp  zlogger.hpp
log/android/: platform_comm.cpp
log/linux/: platform_comm.cpp
log/objc/: platform_comm.mm
packet/: encoding.cpp  encoding.hpp  fix_header.cpp  fix_header.hpp  message.cpp  message.hpp  message_base.cpp  message_base.hpp  message_manager.cpp  message_manager.hpp  tcp_error.cpp  tcp_error.hpp  tcp_io.cpp  tcp_io.hpp  unix_socket.cpp  unix_socket.hpp
socket/: socket_breaker.cpp  socket_breaker.hpp  socket_epoll.cpp  socket_epoll.hpp  socket_kqueue.cpp  socket_kqueue.hpp  socket_poll.cpp  socket_poll.hpp  socket_poll_base.cpp  socket_poll_base.hpp  socket_select.cpp  socket_select.hpp  ssl_socket.cpp  ssl_socket.hpp  tcp_socket.cpp  tcp_socket.hpp
